--- a/config
+++ b/config
@@ -28,7 +28,7 @@ systray-bottom = none
 # Top modules
 top-left = rofi i3
 top-center = title
-top-right = network-detail docker backlight alsa battery date
+top-right = network-detail kind docker backlight alsa battery date
 
 # Bottom modules
 bottom-left = powermenu
