--- a/config
+++ b/config
@@ -28,12 +28,12 @@ systray-bottom = none
 # Top modules
 top-left = rofi i3
 top-center = title
-top-right = network-detail kind docker backlight alsa battery date
+top-right = network-detail-ipv4 kind docker backlight alsa battery date
 
 # Bottom modules
 bottom-left = powermenu updates weather
-bottom-center =
-bottom-right = cpu memory filesystem temperature show-desktop
+bottom-center = 
+bottom-right = network-detail-ipv6 cpu memory filesystem temperature show-desktop
 
 
 #
