:sparkles: Ethernet modules removed.

--- a/config
+++ b/config
@@ -28,12 +28,12 @@ systray-bottom = none
 # Top modules
 top-left = rofi i3
 top-center = title
-top-right = network-wifi-detail-ipv4 network-eth-detail-ipv4 kind docker backlight alsa battery date
+top-right = network-wifi-detail-ipv4 kind docker backlight alsa battery date
 
 # Bottom modules
 bottom-left = powermenu
 bottom-center = 
-bottom-right = network-wifi-detail-ipv6 network-eth-detail-ipv6 cpu memory filesystem temperature
+bottom-right = network-wifi-detail-ipv6 cpu memory filesystem temperature
 
 
 #
