--- a/config
+++ b/config
@@ -33,7 +33,7 @@ top-right = network-wifi-detail-ipv4 kind docker backlight alsa battery date
 # Bottom modules
 bottom-left = powermenu
 bottom-center = 
-bottom-right = network-wifi-detail-ipv6 cpu memory filesystem temperature
+bottom-right = network-wifi-detail-ipv6 cpu memory filesystem temperature show-desktop
 
 
 #
